fix: fix login CSS issue with long text like 'Loading Dédalo files'. Now text is smaller and `text-overflow: ellipsis` is applied.

--- a/core/login/css/login.less
+++ b/core/login/css/login.less
@@ -47,8 +47,16 @@
 			text-align: center;
 			padding-bottom: 1.75rem;
 
+			// display the text as 'Loading Dédalo files'
 			.loader_label {
+				display: block;
 				width: 100%;
+				overflow: hidden;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				font-size: 1.4rem;
+				padding-left: 0px;
+				padding-right: 0px;
 			}
 		}
 
